# Aluminum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_dep.sh
cmake/: ExternalAntlr4Cpp.cmake
grammar/: Aluminum.g4
grammar/Aluminum/: Aluminum.interp  Aluminum.tokens  AluminumBaseListener.cpp  AluminumBaseListener.h  AluminumBaseVisitor.cpp  AluminumBaseVisitor.h  AluminumLexer.cpp  AluminumLexer.h  AluminumLexer.interp  AluminumLexer.tokens  AluminumListener.cpp  AluminumListener.h  AluminumParser.cpp  AluminumParser.h  AluminumVisitor.cpp  AluminumVisitor.h
sample_code/: func_example.al  func_example.ll  hello_world.al  if_example.al  if_example.ll
src/: Aluminum_IR_Code_Generator.cpp  CustomAluminumListener.cpp  CustomAluminumVisitor.cpp  main.cpp
